# dockyard

./: CHANGELOG.md  LICENSE  README.md  cliff.toml  docker-compose.yaml  index.html  package.json  tailwind.config.js  tsconfig.json  updater.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dev.yml  release.yml
src/: App.jsx  App.tsx  constants.js  constants.ts  data.json  main.jsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop-core.json  desktop-fs.json  desktop-shell.json  desktop-store.json  desktop-updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  docker_service.rs  main.rs  state.rs
src-tauri/src/commands/: container.rs  extra.rs  image.rs  mod.rs  network.rs  terminal.rs  volume.rs
src-tauri/src/utils/: mod.rs  storage.rs  terminal.rs  utils.rs
src/Icons/: index.jsx  index.tsx
src/components/: Card.jsx  ContainerTableSection.jsx  DetailsPanel.jsx  JSONSyntaxHighlighter.jsx  JSONSyntaxHighlighter.tsx  ListView.jsx  LogoScreen.jsx  LogoScreen.tsx  LogsViewer.jsx  LogsViewer.tsx  Navbar.jsx  Sidebar.jsx  Sidebar.tsx  StatsChart.jsx  StatsChart.tsx  Table.jsx  Terminal.jsx  Terminal.tsx  Version.jsx  Version.tsx  data.js
src/components/Containers/: ComposeContainerGroup.tsx  ContainerCard.jsx  ContainerCard.tsx  ContainerDetails.jsx  ContainerDetails.tsx  ContainerEnvVars.jsx  ContainerEnvVars.tsx  ContainerNameWidget.jsx  ContainerNameWidget.tsx  ContainerProcesses.jsx  ContainerProcesses.tsx  ContainerStats.jsx  ContainerStats.tsx  Containers.jsx  ContainersList.jsx  ContainersList.tsx  ContainersTopBar.jsx  ContainersTopBar.tsx
src/components/Images/: ImageCard.jsx  ImageCard.tsx  ImageDetails.jsx  ImageDetails.tsx  ImageHistory.jsx  ImageHistory.tsx  ImageList.jsx  ImageList.tsx  Images.jsx  Images.tsx  ImagesTopBar.jsx  ImagesTopBar.tsx
src/components/Screens/: ContainersScreen.jsx  ContainersScreen.tsx  Dashboard.jsx  ErrorScreen.jsx  ErrorScreen.tsx  ImagesScreen.jsx  ImagesScreen.tsx  NetworkScreen.jsx  NetworkScreen.tsx  SettingsScreen.jsx  SettingsScreen.tsx  VolumesScreen.jsx  VolumesScreen.tsx  index.jsx  index.tsx
src/components/Volumes/: VolumeAttachedContainers.jsx  VolumeAttachedContainers.tsx  VolumeCard.jsx  VolumeCard.tsx  VolumeDetails.jsx  VolumeDetails.tsx  VolumesList.jsx  VolumesList.tsx  VolumesTopBar.tsx
src/icons/: index.jsx
src/models/: Container.ts  Image.ts  Network.ts  Volume.ts  index.ts
src/state/: ContainerContext.jsx  ContainerContext.tsx  ImagesContext.jsx  ImagesContext.tsx  NetworkContext.jsx  NetworkContext.tsx  SettingsContext.jsx  SettingsContext.tsx  VolumesContext.jsx  VolumesContext.tsx
src/types/: docker.d.ts
src/utils/: clipboard.js  clipboard.ts  docker-compose.ts  index.js  index.ts  storage.js  storage.ts  toast.js  toast.ts
(+9 files in other folders)
