[package]
name = "docker_dex"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rs-docker = "0.0.60"
#rust_dock = { path = "/home/ropali/Workspaces/rust-dock/" }
tokio = { version = "1.7.0", features = ["rt", "rt-multi-thread", "macros"] }

open = { version = "5.3.0"}
bollard = "0.17.0"
futures-util = "0.3.30"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

