[package]
name = "dockyard"
version = "0.1.0"
description = "Beautifull, Fast & Simple Docker Client"
authors = ["ropali"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "fs-all", "shell-open", "app-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1.7.0", features = ["rt", "rt-multi-thread", "macros"] }

open = { version = "5.3.0"}
bollard = "0.17.0"
futures-util = "0.3.30"

tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

shellish_parse = "2.2"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[profile.release]
lto = true
