[package]
name = "dockyard"
version = "0.4.1"
description = "Beautifull, Fast & Simple Docker Client"
authors = ["ropali"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1.7.0", features = ["rt", "rt-multi-thread", "macros"] }

open = { version = "5.3.0"}
bollard = "0.18.0"
futures-util = "0.3.30"

tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[profile.release]
lto = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
